# pathiumapi

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  PLANNING.md  README.md  lilac.py  main.py  pathium.py  pypi_json.json  pypi_page.html  pyproject.toml  requirements.txt  usage.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
PathiumAPI.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
examples/: app.py  auth_app.py  middleware_demo.py  query_app.py
lilac/: __init__.py  _core.py  cli.py
lilac.egg-info/: SOURCES.txt
pathium/: _core.py  cli.py
pathium.egg-info/: PKG-INFO  entry_points.txt  top_level.txt
pathiumapi/: __init__.py  _core.py  auth.py  cli.py  middleware.py  openapi_pydantic.py  validation.py
release-notes/: v0.1.10.md  v0.1.11.md  v0.1.12.md  v0.1.8.md  v0.1.9.md  v0.2.0.md
scripts/: release.py
tests/: test_auth.py  test_docs_greeting.py  test_middleware.py  test_openapi_generation.py  test_openapi_pydantic.py  test_openapi_query.py  test_router.py  test_validation.py
